--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,8 +38,8 @@ dev = [
 # [project.scripts]
 # jupyterlite-xeus-python-build = "jupyterlite_xeus_python.build:start"
 
-# [project.entry-points."jupyterlite.addon.v0"]
-# jupyterlite-xeus-python = "jupyterlite_xeus_python.env_build_addon:XeusPythonEnv"
+[project.entry-points."jupyterlite.addon.v0"]
+jupyterlite-xeus-python = "jupyterlite_xeus_python.add_on:XeusKernelLoaderAddon"
 
 [tool.hatch.version]
 source = "nodejs"
